--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "superagent": "^6.1.0",
     "web-vitals": "^2.0.1"
   },
   "scripts": {
